# buildwise-cli

./: .gitignore  README.md  package-lock.json  pyproject.toml  pyproject.toml.bak
src/: main.py
src/buildwise/: __init__.py
src/buildwise/api/: main.py
src/buildwise/cli/: __init__.py  __main__.py
src/buildwise/config/: settings.py
src/buildwise/core/: concrete.py  lumber.py  steel.py
src/buildwise/services/: ai_prediction.py
src/buildwise/static/css/: styles.css
src/buildwise/storage/: project.py
src/buildwise/templates/: base.html  dashboard.html
src/buildwise/templates/calculators/: concrete.html  lumber.html  steel.html
tests/unit/core/: test_concrete.py  test_lumber.py  test_steel.py
