[tool.poetry]
name = "buildwise-cli"
version = "0.1.0"
description = "Intelligent construction calculator suite with AI-powered estimation and SaaS capabilities"
authors = ["Ready-Set Solutions <support@charleysllc.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "buildwise", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typer = "^0.9.0"
rich = "^13.6.0"
pint = "^0.23"
pydantic = "^2.5.3"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
httpx = "^0.25.2"
jinja2 = "^3.1.2"
openai = "^1.3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pytest-asyncio = "^0.23.2"
mypy = "^1.7.1"
bandit = "^1.7.5"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
buildwise = "buildwise.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
